[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = "../arith" }
transcript = { path = "../transcript" }
ark-std.workspace = true
halo2curves.workspace = true
getrandom.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mpi.workspace = true
# the methods below aren't supported on WASM
gf2 = { path = "../arith/gf2" }
gf2_128 = { path = "../arith/gf2_128" }
mersenne31 = { path = "../arith/mersenne31" }

[features]
default = []
# default = [ "grinding" ]
grinding = []